# advanced-python-course

./: pyproject.toml
hw1_cli/: nl.py  tail.py  wc.py
hw1_cli/artifacts/: nl.txt  tail.txt  wc.txt
hw2/: generate_latex.py  latex_example.py
hw2/artifacts/: example.tex
hw3/: matlib.py  matlib_hash.py  matlib_mixins.py  test_matlib.py  test_matlib_hash.py  test_matlib_mixins.py
hw3/artifacts/: A.txt  AB.txt  B.txt  C.txt  CD.txt  hash.txt  matrix*.txt  matrix+.txt  mixins-matrix-.txt  mixins-matrix_div.txt
hw4/: ab_app.py  fibonacci.py  integrate.py
hw4/artifacts/: ab_app.txt  fib_times.txt  integrate_times.txt
